--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ em {
     display: table;
 
     background: black;
-    background: url(../assets/bg.png);
+    background: url(../assets/bg.webp);
     background-size: auto, 100%;
     background-size: cover;
     background-repeat: no-repeat;
